cmake_minimum_required(VERSION 3.27)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        #cpp BT.cpp
        quick_sort.cpp
        quick_sort.h
        quicksorttest.cpp
        quick_sort.cpp
        #DS.cpp
        #SqListBasicOperations.cpp
        #DFS.cpp
        #VAR.cpp
        #SqListBasicOperations.cpp
        #SqList.cpp
        #DS.cpp
)

#set(SOURCE_FILES
#        quick_sort.cpp
#        quick_sort.h
#        quicksorttest.cpp
#)